tests/invalid/test_may_duplicate.err_exp3
test_may_duplicate.m:039: Error: the [38;5;171m`may_duplicate' attribute[39;49m on the
test_may_duplicate.m:039:   foreign_proc is [38;5;203mnot compatible[39;49m with the
test_may_duplicate.m:039:   [38;5;171m`:- pragma no_inline' declaration[39;49m on the predicate.
test_may_duplicate.m:061: Error: the [38;5;171m`may_not_duplicate' attribute[39;49m on the
test_may_duplicate.m:061:   foreign_proc is [38;5;203mnot compatible[39;49m with the
test_may_duplicate.m:061:   [38;5;171m`:- pragma inline' declaration[39;49m on the predicate.
